--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
-              <img src="assets/img/portfolio/mrsign.png" class="img-fluid-portfolio" alt="">
+              <img src="https://i.imgur.com/nqXFd0q.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>MRT Signages Concept/Replications</h4>
-                <a href="assets/img/portfolio/mrsign.png" title="MRT Signages Concept/Replications | 2020 - 2022"
+                <a href="https://i.imgur.com/nqXFd0q.png" title="MRT Signages Concept/Replications | 2020 - 2022"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/mrt-nselem.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
@@ -360,10 +360,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
-              <img src="assets/img/portfolio/br.png" class="img-fluid-portfolio" alt="">
+              <img src="https://i.imgur.com/KtauzUr.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Bus Replications</h4>
-                <a href="assets/img/portfolio/br.png" title="Bus Replications | 2021 - 2022"
+                <a href="https://i.imgur.com/KtauzUr.png" title="Bus Replications | 2021 - 2022"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/bus-replications.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
