--- a/portfolio/bus-replications.html
+++ b/portfolio/bus-replications.html
@@ -89,51 +89,55 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet.png" alt="">
+                  <img src="https://i.imgur.com/NUP1HYq.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet1.png" alt="">
+                  <img src="https://i.imgur.com/EA84utr.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet2.png" alt="">
+                  <img src="https://i.imgur.com/nnEAOlB.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet3.png" alt="">
+                  <img src="https://i.imgur.com/OFTA1HV.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet4.png" alt="">
+                  <img src="https://i.imgur.com/D9W5Zyw.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet5.png" alt="">
+                  <img src="https://i.imgur.com/7kMWxOT.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet6.png" alt="">
+                  <img src="https://i.imgur.com/vmKsnWX.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet7.png" alt="">
+                  <img src="https://i.imgur.com/rr0GhUt.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet8.png" alt="">
+                  <img src="https://i.imgur.com/dV65hrE.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet9.png" alt="">
+                  <img src="https://i.imgur.com/VgRDizj.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet10.png" alt="">
+                  <img src="https://i.imgur.com/AG9SQkA.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/brdet11.png" alt="">
+                  <img src="https://i.imgur.com/CjyMNkx.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="https://i.imgur.com/Hs3uiNy.png" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
