--- a/portfolio/mrt-nselem.html
+++ b/portfolio/mrt-nselem.html
@@ -89,35 +89,35 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="../assets/img/portfolio/mrsignDet.png" alt="">
+                                    <img src="https://i.imgur.com/kiscZTU.png" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="../assets/img/portfolio/mrsignDet1a.png" alt="">
+                                    <img src="https://i.imgur.com/P5aSDoF.png" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="../assets/img/portfolio/mrsignDet1.png" alt="">
+                                    <img src="https://i.imgur.com/w6Ly8hU.png" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="../assets/img/portfolio/mrsignDet2.png" alt="">
+                                    <img src="https://i.imgur.com/66sLwEI.png" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="../assets/img/portfolio/mrsignDet3.png" alt="">
+                                    <img src="https://i.imgur.com/Vfvc2sL.png" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="../assets/img/portfolio/mrsignDet4.png" alt="">
+                                    <img src="https://i.imgur.com/Cu865sh.png" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="../assets/img/portfolio/mrsignDet5.png" alt="">
+                                    <img src="https://i.imgur.com/ch7IwZE.png" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="../assets/img/portfolio/mrsignDet6.png" alt="">
+                                    <img src="https://i.imgur.com/mgozAFR.png" alt="">
                                 </div>
                             </div>
                             <div class="swiper-pagination"></div>
