--- a/portfolio/man-superlion.html
+++ b/portfolio/man-superlion.html
@@ -89,7 +89,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/lionDet.png" alt="">
+                  <img src="https://i.imgur.com/5457Ew3.png" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
