--- a/portfolio/ffl.html
+++ b/portfolio/ffl.html
@@ -88,7 +88,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/fflDet.png" alt="">
+                  <img src="https://i.imgur.com/Uyk3Ywh.png" alt="">
                 </div>
 
               </div>
