--- a/index.html
+++ b/index.html
@@ -371,10 +371,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-wd">
-              <img src="assets/img/portfolio/pw.png" class="img-fluid-portfolio" alt="">
+              <img src="https://i.imgur.com/j20EaY5.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Personal Website Redesigns</h4>
-                <a href="assets/img/portfolio/pw.png" title="Personal Website Redesigns | 2019 - May 2022"
+                <a href="https://i.imgur.com/j20EaY5.png" title="Personal Website Redesigns | 2019 - May 2022"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/pw-redesign.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
@@ -382,10 +382,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
-              <img src="assets/img/portfolio/ezr.png" class="img-fluid-portfolio" alt="">
+              <img src="https://i.imgur.com/bqO1h81.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Ez-Link Card Redesign</h4>
-                <a href="assets/img/portfolio/ezr.png" title="Ez-Link Card Redesign | 2021"
+                <a href="https://i.imgur.com/bqO1h81.png" title="Ez-Link Card Redesign | 2021"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/ezlink-redesign.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
@@ -393,10 +393,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-id">
-              <img src="assets/img/portfolio/igrD.png" class="img-fluid-portfolio" alt="">
+              <img src="https://i.imgur.com/c4cJ3qC.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>COVID-19 Shopping Habits</h4>
-                <a href="assets/img/portfolio/igrD.png" title="COVID-19 Shopping Habits | 2021"
+                <a href="https://i.imgur.com/c4cJ3qC.png" title="COVID-19 Shopping Habits | 2021"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/igra-1.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
@@ -404,10 +404,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-id">
-              <img src="assets/img/portfolio/igr.png" class="img-fluid-portfolio" alt="">
+              <img src="https://i.imgur.com/Cd4dmsF.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Infographic Resume</h4>
-                <a href="assets/img/portfolio/igr.png" title="Infographic Resume | 2020"
+                <a href="https://i.imgur.com/Cd4dmsF.png" title="Infographic Resume | 2020"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/igra-2.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
@@ -415,10 +415,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-am">
-              <img src="assets/img/portfolio/fls.png" class="img-fluid-portfolio" alt="">
+              <img src="https://i.imgur.com/5havueB.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Flashify - a Flashcard App</h4>
-                <a href="assets/img/portfolio/fls.png" title="Flashify - a Flashcard App | 2020"
+                <a href="https://i.imgur.com/5havueB.png" title="Flashify - a Flashcard App | 2020"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/ffs.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
@@ -426,10 +426,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-am">
-              <img src="assets/img/portfolio/frc.png" class="img-fluid-portfolio" alt="">
+              <img src="https://i.imgur.com/91L7YvJ.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Food Review Compiler App</h4>
-                <a href="assets/img/portfolio/frc.png" title="Food Review Compiler App | 2020"
+                <a href="https://i.imgur.com/91L7YvJ.png" title="Food Review Compiler App | 2020"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/frc.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
@@ -437,10 +437,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-ld">
-              <img src="assets/img/portfolio/ffl.png" class="img-fluid-portfolio" alt="">
+              <img src="https://i.imgur.com/YFyTSxh.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Friends Forever Logo Design</h4>
-                <a href="assets/img/portfolio/ffl.png" title="Friends Forever Logo Design | 2020"
+                <a href="https://i.imgur.com/YFyTSxh.png" title="Friends Forever Logo Design | 2020"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/ffl.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
