--- a/portfolio/ezlink-redesign.html
+++ b/portfolio/ezlink-redesign.html
@@ -88,31 +88,31 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/ezrdet.png" alt="">
+                  <img src="https://i.imgur.com/oDY7RAu.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/ezrdet1.png" alt="">
+                  <img src="https://i.imgur.com/XAbfmjI.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/ezrdet2.png" alt="">
+                  <img src="https://i.imgur.com/rfYPmof.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/ezrdet3.png" alt="">
+                  <img src="https://i.imgur.com/tWuIc7L.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/ezrdet4.png" alt="">
+                  <img src="https://i.imgur.com/8In2rVE.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/ezrdet5.png" alt="">
+                  <img src="https://i.imgur.com/WRAcZ89.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/ezrdet6.png" alt="">
+                  <img src="https://i.imgur.com/QP5wxDY.png" alt="">
                 </div>
 
               </div>
