--- a/portfolio/ffs.html
+++ b/portfolio/ffs.html
@@ -88,7 +88,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/flsDet.png" alt="">
+                  <img src="https://i.imgur.com/xmfREEH.png" alt="">
                 </div>
 
               </div>
