--- a/portfolio/frc.html
+++ b/portfolio/frc.html
@@ -88,7 +88,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/frcDet.png" alt="">
+                  <img src="https://i.imgur.com/PwgA1l2.png" alt="">
                 </div>
 
               </div>
