--- a/portfolio/igra-2.html
+++ b/portfolio/igra-2.html
@@ -89,7 +89,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/igrDet.png" alt="">
+                  <img src="https://i.imgur.com/edLPt3f.png" alt="">
                 </div>
 
               </div>
