--- a/portfolio/pw-redesign.html
+++ b/portfolio/pw-redesign.html
@@ -89,11 +89,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/PWv1.jpeg" alt="">
+                  <img src="https://i.imgur.com/a2vd71Q.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/PWv2.jpeg" alt="">
+                  <img src="https://i.imgur.com/qoTLPOy.jpg" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
