--- a/index.html
+++ b/index.html
@@ -316,8 +316,7 @@
 
         <div class="section-header">
           <h2>Portfolio</h2>
-          <p>Works I have done over the years. These are either my work from past school assignments or from my own
-            personal project.</p>
+          <p>Works done over the years. These are either my commisioned works, past school assignments or my own personal project.</p>
         </div>
 
       </div>
@@ -337,6 +336,17 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
+              <img src="https://i.imgur.com/l2OaGt2.png" class="img-fluid-portfolio" alt="">
+              <div class="portfolio-info">
+                <h4>Ez-Link Card Redesign V2</h4>
+                <a href="https://i.imgur.com/l2OaGt2.png" title="Ez-Link Card Redesign V2 | 2022"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
+                <a href="portfolio/ezlink-redesign-v2.html" class="details-link"><i
+                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
               <img src="https://i.imgur.com/vpGCJNc.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
@@ -377,17 +387,6 @@
                 <a href="https://i.imgur.com/j20EaY5.png" title="Personal Website Redesigns | 2019 - May 2022"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/pw-redesign.html" class="details-link"><i
-                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
-              <img src="https://i.imgur.com/bqO1h81.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>Ez-Link Card Redesign</h4>
-                <a href="https://i.imgur.com/bqO1h81.png" title="Ez-Link Card Redesign | 2021"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/ezlink-redesign.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
