--- a/portfolio/ezlink-redesign-v2.html
+++ b/portfolio/ezlink-redesign-v2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EZ-Link Card Redesign</title>
+  <title>EZ-Link Card Redesign V2 </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -67,10 +67,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>EZ-Link Card Redesign</h2>
+          <h2>EZ-Link Card Redesign V2</h2>
           <ol>
             <li><a href="../index.html#hero-animated">Home</a></li>
-            <li>EZ-Link Card Redesign</li>
+            <li>EZ-Link Card Redesign V2</li>
           </ol>
         </div>
 
@@ -88,31 +88,31 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/oDY7RAu.png" alt="">
+                  <img src="https://i.imgur.com/IEhJq1t.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/XAbfmjI.png" alt="">
+                  <img src="https://i.imgur.com/lgDIZ6p.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/rfYPmof.png" alt="">
+                  <img src="https://i.imgur.com/ACScups.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/tWuIc7L.png" alt="">
+                  <img src="https://i.imgur.com/xjBreKK.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/8In2rVE.png" alt="">
+                  <img src="https://i.imgur.com/mbfi65Q.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/WRAcZ89.png" alt="">
+                  <img src="https://i.imgur.com/n8TL16U.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/QP5wxDY.png" alt="">
+                  <img src="https://i.imgur.com/yNR49I8.png" alt="">
                 </div>
 
               </div>
@@ -125,7 +125,7 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: Concept Design</li>
-                <li><strong>Project Year</strong>: 2021</li>
+                <li><strong>Project Year</strong>: 2021 (V1), 2022 (V2)</li>
               </ul>
             </div>
             <div class="portfolio-description">
@@ -133,11 +133,11 @@
               <p>
                 An attempt to redesign the EZ-Link Concession Cards, based on the current design language of the <a
                   href="https://www.samuel-lim.com/wayfinding-ux">wayfinding system.</a>
-                  <br>
-                  <br>
-                  New Version:
-                  <br>
-                   <a href="../portfolio/ezlink-redesign-v2.html">Version 2</a>
+                <br>
+                <br>
+                Archives:
+                <br>
+                 <a href="../portfolio/ezlink-redesign.html">Version 1</a>
               </p>
             </div>
           </div>
