--- a/portfolio/ezlink-redesign-v2.html
+++ b/portfolio/ezlink-redesign-v2.html
@@ -125,7 +125,7 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong>: Concept Design</li>
-                <li><strong>Project Year</strong>: 2021 (V1), 2022 (V2)</li>
+                <li><strong>Project Year</strong>: 2022</li>
               </ul>
             </div>
             <div class="portfolio-description">
@@ -137,7 +137,7 @@
                 <br>
                 Archives:
                 <br>
-                 <a href="../portfolio/ezlink-redesign.html">Version 1</a>
+                 <a href="../portfolio/ezlink-redesign.html">Version 1 (2021)</a>
               </p>
             </div>
           </div>
@@ -162,7 +162,7 @@
             &copy; 2022 <strong><span>Copyright</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Last Updated: September 2022</a>
+            Last Updated: October 2022</a>
           </div>
         </div>
       </div>
