--- a/portfolio/ezlink-redesign.html
+++ b/portfolio/ezlink-redesign.html
@@ -137,7 +137,7 @@
                   <br>
                   New Version:
                   <br>
-                   <a href="../portfolio/ezlink-redesign-v2.html">Version 2</a>
+                   <a href="../portfolio/ezlink-redesign-v2.html">Version 2 (2022)</a>
               </p>
             </div>
           </div>
