--- a/index.html
+++ b/index.html
@@ -126,32 +126,32 @@
 
                 <div class="skill-mf">
                   <p class="title-s">Skills</p>
-                  <span class="about-skill">HTML</span> <span class="pull-right">85%</span>
+                  <span class="about-skill">HTML</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85"
                       aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                  <span class="about-skill">JavaScript (Basic)</span> <span class="pull-right">40%</span>
+                  <span class="about-skill">JavaScript (Basic)</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span class="about-skill">Android Studio</span> <span class="pull-right">50%</span>
+                  <span class="about-skill">Android Studio</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span class="about-skill">Adobe Illustrator</span> <span class="pull-right">60%</span>
+                  <span class="about-skill">Adobe Illustrator</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span class="about-skill">Microsoft Office</span> <span class="pull-right">80%</span>
+                  <span class="about-skill">Microsoft Office</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span class="about-skill">Microsoft Windows</span> <span class="pull-right">90%</span>
+                  <span class="about-skill">Microsoft Windows</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
