--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header" class="header fixed-top" data-scrollto-offset="0">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
+      <a href="/" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <img src="assets/img/logo.png" alt="">
       </a>
 
@@ -51,9 +51,9 @@
         <ul>
 
           <li><a class="nav-link scrollto" href="#hero-animated"><span>Home</span></a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#connect">Connect</a></li>
+          <li><a class="nav-link scrollto" href="../#about">About</a></li>
+          <li><a class="nav-link scrollto" href="../#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="../#connect">Connect</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
@@ -70,7 +70,7 @@
       <!-- <h2>Welcome to <span>HeroBiz</span></h2> -->
       <p class="hero-intro">I am <span class="hero-span">Nurafian Zulkifli</span> - An aspiring Web Developer and Designer. </p>
       <div class="d-flex justify-content-center">
-        <a class="scrollto" href="index.html#about"><img src="assets/img/chevron-nws.svg"
+        <a class="scrollto" href="../#about"><img src="assets/img/chevron-nws.svg"
             class="img-fluid animated"></a>
       </div>
     </div>
