--- a/portfolio/ezlink-redesign-v2.html
+++ b/portfolio/ezlink-redesign-v2.html
@@ -42,17 +42,17 @@
   <header id="header" class="header fixed-top" data-scrollto-offset="0">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="../index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
+      <a href="" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <img src="../assets/img/logo.png" alt="">
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
 
-          <li><a class="nav-link scrollto" href="../index.html#hero-animated"><span>Home</span></a></li>
-          <li><a class="nav-link scrollto" href="../index.html#about">About</a></li>
-          <li><a class="nav-link scrollto active" href="../index.html#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="../index.html#connect">Connect</a></li>
+          <li><a class="nav-link scrollto" href="#hero-animated"><span>Home</span></a></li>
+          <li><a class="nav-link scrollto" href="../#about">About</a></li>
+          <li><a class="nav-link scrollto active" href="../#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="../#connect">Connect</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
@@ -69,7 +69,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>EZ-Link Card Redesign V2</h2>
           <ol>
-            <li><a href="../index.html#hero-animated">Home</a></li>
+            <li><a href="#hero-animated">Home</a></li>
             <li>EZ-Link Card Redesign V2</li>
           </ol>
         </div>
