--- a/portfolio/ezlink-redesign-v2.html
+++ b/portfolio/ezlink-redesign-v2.html
@@ -42,7 +42,7 @@
   <header id="header" class="header fixed-top" data-scrollto-offset="0">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
+      <a href="/" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
         <img src="../assets/img/logo.png" alt="">
       </a>
 
