--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar">
         <ul>
 
-          <li><a class="nav-link scrollto" href="#hero-animated"><span>Home</span></a></li>
+          <li><a class="nav-link scrollto" href="../#hero-animated"><span>Home</span></a></li>
           <li><a class="nav-link scrollto" href="../#about">About</a></li>
           <li><a class="nav-link scrollto" href="../#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="../#connect">Connect</a></li>
