--- a/portfolio/bus-replications.html
+++ b/portfolio/bus-replications.html
@@ -70,7 +70,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Bus Replications</h2>
           <ol>
-            <li><a href="#hero-animated">Home</a></li>
+            <li><a href="../#hero-animated">Home</a></li>
             <li>Bus Replications</li>
           </ol>
         </div>
