--- a/portfolio/ffs.html
+++ b/portfolio/ffs.html
@@ -49,7 +49,7 @@
       <nav id="navbar" class="navbar">
         <ul>
 
-          <li><a class="nav-link scrollto" href="#hero-animated"><span>Home</span></a></li>
+          <li><a class="nav-link scrollto" href="../#hero-animated"><span>Home</span></a></li>
           <li><a class="nav-link scrollto" href="../#about">About</a></li>
           <li><a class="nav-link scrollto active" href="../#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="../#connect">Connect</a></li>
