--- a/portfolio/pw-redesign.html
+++ b/portfolio/pw-redesign.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar">
         <ul>
 
-          <li><a class="nav-link scrollto" href="#hero-animated"><span>Home</span></a></li>
+          <li><a class="nav-link scrollto" href="../#hero-animated"><span>Home</span></a></li>
           <li><a class="nav-link scrollto" href="../#about">About</a></li>
           <li><a class="nav-link scrollto active" href="../#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="../#connect">Connect</a></li>
@@ -70,7 +70,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Personal Website Redesigns</h2>
           <ol>
-            <li><a href="#hero-animated">Home</a></li>
+            <li><a href="../#hero-animated">Home</a></li>
             <li>Personal Website Redesigns</li>
           </ol>
         </div>
