--- a/index.html
+++ b/index.html
@@ -265,6 +265,11 @@
                 <ul>
                   <li><i class="bi bi-check-circle-fill"></i> <b>Intern,</b> Information Services Group</li>
                 </ul>
+
+                <p class="timeline-year">Nov 2022 - Present | Singapore Armed Forces</p>
+                <ul>
+                  <li><i class="bi bi-check-circle-fill"></i>Supply Assistant (GE)</li>
+                </ul>
               </div>
 
             </div>
