Revert "2022-11 Cumulative Update (3.0.2000)"
This reverts commit 96ab076b0a24210121d2d9fb186e8ee8089681ed.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
           <li><a class="nav-link scrollto" href="../#hero-animated"><span>Home</span></a></li>
           <li><a class="nav-link scrollto" href="../#about">About</a></li>
-          <li><a class="nav-link scrollto" href="../#portfolio">My Works</a></li>
+          <li><a class="nav-link scrollto" href="../#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="../#connect">Connect</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
@@ -219,7 +219,7 @@
                 <p class="summary">
                   My name is Nurafian Zulkifli and I recently graduated from Singapore Polytechnic.<br>
                   I am an avid Gadget Enthusiast too, where I enjoy looking and tinkering with Mobile Devices and
-                  Computers. <br><br> I enjoy replicating stuffs that interests me, in which some of my works can be seen below. <b>Currently serving the nation.</b>
+                  Computers. I enjoy replicating stuffs that interests me, which you can see some of my works below.
                 </p>
               </div>
               <div class="col-lg-4 order-1 order-lg-2 text-center" data-aos="fade-up" data-aos-delay="200">
@@ -314,13 +314,13 @@
     </section>
 
 
-    <!-- ======= My Works (Portfolio) Section ======= -->
+    <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio" data-aos="fade-up">
 
       <div class="container">
 
         <div class="section-header">
-          <h2>My Works</h2>
+          <h2>Portfolio</h2>
           <p>Works done over the years. These are either my commisioned works, past school assignments or my own personal project.</p>
         </div>
 
