--- a/portfolio/mrt-nselem.html
+++ b/portfolio/mrt-nselem.html
@@ -52,7 +52,7 @@
 
                     <li><a class="nav-link scrollto" href="../#hero-animated"><span>Home</span></a></li>
                     <li><a class="nav-link scrollto" href="../#about">About</a></li>
-                    <li><a class="nav-link scrollto active" href="../#portfolio">My Works</a></li>
+                    <li><a class="nav-link scrollto active" href="../#portfolio">Portfolio</a></li>
                     <li><a class="nav-link scrollto" href="../#connect">Connect</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle d-none"></i>
