--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
           <li><a class="nav-link scrollto" href="../#hero-animated"><span>Home</span></a></li>
           <li><a class="nav-link scrollto" href="../#about">About</a></li>
-          <li><a class="nav-link scrollto" href="../#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="../#portfolio">My Works</a></li>
           <li><a class="nav-link scrollto" href="../#connect">Connect</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
@@ -173,8 +173,8 @@
     <section id="timelines" class="timelines">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Education, Experience and Achievements</h2>
-          <p>I took a longer path to get to where I am today. Here's a look at my years of education through the years.
+          <h2>Summary & Timelines</h2>
+          <p>Took a longer path to get to where I am today. Here's a look at education, experiences and achievement timelines over the years.
           </p>
         </div>
 
@@ -217,9 +217,9 @@
               <div class="col-lg-8 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
                 <h3 class="summary-tit">Summary</h3>
                 <p class="summary">
-                  My name is Nurafian Zulkifli and I recently graduated from Singapore Polytechnic.<br>
+                  My name is Nurafian Zulkifli and I recently graduated from Singapore Polytechnic. Currently serving the nation.<br><br>
                   I am an avid Gadget Enthusiast too, where I enjoy looking and tinkering with Mobile Devices and
-                  Computers. I enjoy replicating stuffs that interests me, which you can see some of my works below.
+                  Computers. I also enjoy replicating stuffs that interests me, in which my works can be seen below.
                 </p>
               </div>
               <div class="col-lg-4 order-1 order-lg-2 text-center" data-aos="fade-up" data-aos-delay="200">
