--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@
     </section>
 
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= My Works (Portfolio) Section ======= -->
     <section id="portfolio" class="portfolio" data-aos="fade-up">
 
       <div class="container">
 
         <div class="section-header">
-          <h2>Portfolio</h2>
+          <h2>My Works</h2>
           <p>Works done over the years. These are either my commisioned works, past school assignments or my own personal project.</p>
         </div>
 
