--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Summary & Timelines</h2>
-          <p>Took a longer path to get to where I am today. Here's a look at education, experiences and achievement timelines over the years.
+          <p>Took a longer path to get to where I am today. Here's a look at my education, experiences and achievement timelines over the years.
           </p>
         </div>
 
@@ -321,7 +321,7 @@
 
         <div class="section-header">
           <h2>My Works</h2>
-          <p>Works done over the years. These are either my commisioned works, past school assignments or my own personal project.</p>
+          <p>Works done over the years. These are either my commissioned works, past school assignments or my own personal project.</p>
         </div>
 
       </div>
