--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Let's Get In Touch!</h2>
-          <p>Have questions? Reach me through these platforms.</p>
+          <h2>Let's Connect!</h2>
+          <p>Have questions? I'm available through these platforms.</p>
         </div>
 
         <div class="row gy-5">
@@ -479,10 +479,10 @@
                 <div class="icon">
                   <i class="fa-solid fa-envelope-open-text"></i>
                 </div>
-                <a href="mailto:nurafian.bz33@gmail.com" class="stretched-link">
+                <a href="mailto:nurafian.bz33@gmail.com?subject=Referral from the website" class="stretched-link">
                   <h3>Email Address</h3>
                 </a>
-                <p>nurafian.bz33@gmail.com</p>
+                <p>For non-urgent enquiries</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -539,7 +539,7 @@
             &copy; 2022 <strong><span>Copyright</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Last Updated: November 2022</a>
+            Last Updated: December 2022</a>
           </div>
         </div>
       </div>
