--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
@@ -49,11 +50,12 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-
-          <li><a class="nav-link scrollto" href="../#hero-animated"><span>Home</span></a></li>
-          <li><a class="nav-link scrollto" href="../#about">About</a></li>
-          <li><a class="nav-link scrollto" href="../#portfolio">My Works</a></li>
-          <li><a class="nav-link scrollto" href="../#connect">Connect</a></li>
+          <li><a href="#hero-animated" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>My Works</span></a></li>
+          <li><a href="#connect" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Connect</span></a></li>
+            </ul>
+          </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
