--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="#hero-animated" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>My Works</span></a></li>
-          <li><a href="#connect" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Connect</span></a></li>
+          <li><a href="#connect" class="nav-link scrollto"><i class="bx bxs-group"></i> <span>Connect</span></a></li>
             </ul>
           </li>
         </ul>
