--- a/index.html
+++ b/index.html
@@ -498,7 +498,8 @@
                 <div class="icon">
                   <i class="fa-solid fa-circle-user"></i>
                 </div>
-                <a href="https://linktr.ee/Nrfz" class="stretched-link">
+                <!-- <a href="https://linktr.ee/Nrfz" class="stretched-link"> -->
+                <a href="/connect.html" class="stretched-link"></a>
                   <h3>Social Media</h3>
                 </a>
                 <p>via Linktr.ee</p>
