--- a/connect.html
+++ b/connect.html
@@ -44,18 +44,19 @@
   <header id="header" class="header fixed-top" data-scrollto-offset="0">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="/" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
-        <img src="assets/img/logo.png" alt="">
+      <a href="/#connect" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
+        <img src="assets/img/chevron-nws-left.svg" class="img-fluid animated" title="Back to Main Page">
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="#hero-animated" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>My Works</span></a></li>
-          <li><a href="#connect" class="nav-link scrollto"><i class="bx bxs-group"></i> <span>Connect</span></a></li>
-            </ul>
+          <li><a href="/#hero-animated" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="/#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="/#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>My Works</span></a></li>
+          <li><a href="#" class="nav-link scrollto active"><i class="bx bxs-group"></i> <span>Connect</span></a>
           </li>
+        </ul>
+        </li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
@@ -76,12 +77,12 @@
 
 
     <!-- ======= Connect Section ======= -->
-    <section id="connect" class="connect">
+    <section id="socials" class="socials">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
           <h2>Socials</h2>
-          <p>Have questions? I'm available through these platforms.</p>
+          <p>Follow me through my socials.</p>
         </div>
 
         <div class="row gy-5">
@@ -89,16 +90,15 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/email.png" class="img-fluid" alt="">
+                <img src="assets/img/facebook.png" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
                   <i class="fa-brands fa-facebook-f"></i>
                 </div>
-                <a href="mailto:nurafian.bz33@gmail.com?subject=Referral from the website" class="stretched-link">
+                <a href="https://www.facebook.com/Nrfnzlkf/" class="stretched-link">
                   <h3>Facebook</h3>
                 </a>
-                <p>For non-urgent enquiries</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -106,16 +106,15 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/social.png" class="img-fluid" alt="">
+                <img src="assets/img/twitter.png" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
                   <i class="fa-brands fa-twitter"></i>
                 </div>
-                <a href="https://linktr.ee/Nrfz" class="stretched-link">
+                <a href="https://twitter.com/_nrf_z?s=09" class="stretched-link">
                   <h3>Twitter</h3>
                 </a>
-                <p>via Linktr.ee</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -123,17 +122,15 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/work.png" class="img-fluid" alt="">
+                <img src="assets/img/instagram.png" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
                   <i class="fa-brands fa-instagram"></i>
                 </div>
-                <a href="https://www.linkedin.com/in/nurafian-zulkifli/" class="stretched-link">
+                <a href="https://www.instagram.com/nrfz._/" class="stretched-link">
                   <h3>Instagram</h3>
                 </a>
-                <p>For Work-related purposes
-                </p>
               </div>
             </div>
           </div><!-- End Service Item -->
