--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 </div>
                 <!-- <a href="https://linktr.ee/Nrfz" class="stretched-link"> -->
                 <a href="/connect.html" class="stretched-link"></a>
-                  <h3>Social Media</h3>
+                  <h3>Socials</h3>
                 </a>
                 <p>via Linktr.ee</p>
               </div>
