--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                 <a href="/connect.html" class="stretched-link"></a>
                   <h3>Socials</h3>
                 </a>
-                <p>via Linktr.ee</p>
+                <p>Follow me through my socials</p>
               </div>
             </div>
           </div><!-- End Service Item -->
