--- a/connect.html
+++ b/connect.html
@@ -67,22 +67,13 @@
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
-
-
-    <!-- ======= Timelines Section ======= -->
-
-
-    <!-- ======= My Works (Portfolio) Section ======= -->
-
-
-    <!-- ======= Connect Section ======= -->
+    <!-- ======= Socials Section ======= -->
     <section id="socials" class="socials">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
           <h2>Socials</h2>
-          <p>Follow me through my socials</p>
+          <p>Follow me on my socials</p>
         </div>
 
         <div class="row gy-5">
