--- a/connect.html
+++ b/connect.html
@@ -88,7 +88,7 @@
                   <i class="fa-brands fa-facebook-f"></i>
                 </div>
                 <a href="https://www.facebook.com/Nrfnzlkf/" class="stretched-link">
-                  <h3>Facebook</h3>
+                  <h3>Facebook &nbsp; <i class="fa-solid fa-lock"></i></h3>
                 </a>
               </div>
             </div>
@@ -120,7 +120,7 @@
                   <i class="fa-brands fa-instagram"></i>
                 </div>
                 <a href="https://www.instagram.com/nrfz._/" class="stretched-link">
-                  <h3>Instagram</h3>
+                  <h3>Instagram &nbsp; <i class="fa-solid fa-lock"></i></h3>
                 </a>
               </div>
             </div>
