--- a/connect.html
+++ b/connect.html
@@ -73,7 +73,7 @@
 
         <div class="section-header">
           <h2>Socials</h2>
-          <p>Follow me on my socials</p>
+          <p>Follow me through my socials</p>
         </div>
 
         <div class="row gy-5">
