--- a/connect.html
+++ b/connect.html
@@ -103,7 +103,7 @@
                 <div class="icon">
                   <i class="fa-brands fa-twitter"></i>
                 </div>
-                <a href="https://twitter.com/_nrf_z?s=09" class="stretched-link">
+                <a href="https://twitter.com/_nrf_z" class="stretched-link">
                   <h3>Twitter</h3>
                 </a>
               </div>
