--- a/portfolio/mrt-nselem.html
+++ b/portfolio/mrt-nselem.html
@@ -22,44 +22,46 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
 
-    <!-- Vendor CSS Files -->
-    <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-    <!-- Variables CSS Files. Uncomment your preferred color scheme -->
-    <link href="../assets/css/variables.css" rel="stylesheet">
+  <!-- Variables CSS Files. Uncomment your preferred color scheme -->
+  <link href="../assets/css/variables.css" rel="stylesheet">
 
 
-    <!-- Template Main CSS File -->
-    <link href="../assets/css/main.css" rel="stylesheet">
+  <!-- Template Main CSS File -->
+  <link href="../assets/css/main.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <!-- ======= Header ======= -->
-    <header id="header" class="header fixed-top" data-scrollto-offset="0">
-        <div class="container-fluid d-flex align-items-center justify-content-between">
+  <!-- ======= Header ======= -->
+  <header id="header" class="header fixed-top" data-scrollto-offset="0">
+    <div class="container-fluid d-flex align-items-center justify-content-between">
 
-            <a href="/" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
-                <img src="../assets/img/logo.png" alt="">
-            </a>
+      <a href="/" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
+        <img src="../assets/img/logo.png" alt="">
+      </a>
 
-            <nav id="navbar" class="navbar">
-                <ul>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="/#hero-animated" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="/#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="/#portfolio" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>My Works</span></a></li>
+          <li><a href="/#connect" class="nav-link scrollto"><i class="bx bxs-group"></i> <span>Connect</span></a></li>
+            </ul>
+          </li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle d-none"></i>
+      </nav><!-- .navbar -->
 
-                    <li><a class="nav-link scrollto" href="../#hero-animated"><span>Home</span></a></li>
-                    <li><a class="nav-link scrollto" href="../#about">About</a></li>
-                    <li><a class="nav-link scrollto active" href="../#portfolio">My Works</a></li>
-                    <li><a class="nav-link scrollto" href="../#connect">Connect</a></li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle d-none"></i>
-            </nav><!-- .navbar -->
-
-        </div>
-    </header><!-- End Header -->
+    </div>
+  </header><!-- End Header -->
 
     <main id="main">
 
