--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               <img src="https://i.imgur.com/Rve9vgT.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>MyTransport.SG App Redesign</h4>
-                <a href="https://i.imgur.com/l2OaGt2.png" title="MyTransport.SG App Redesign | 2022"
+                <a href="https://i.imgur.com/Rve9vgT.png" title="MyTransport.SG App Redesign | 2022"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/mtsg.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
