--- a/portfolio/mtsg.html
+++ b/portfolio/mtsg.html
@@ -92,19 +92,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/6V3e56t.png" alt="">
+                  <img src="https://imgur.com/1lEzi6x.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/hMgKu9V.png" alt="">
+                  <img src="https://imgur.com/1fH4Ioh.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/Kp52CCX.png" alt="">
+                  <img src="https://imgur.com/LzB1Kva.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/4LFu9vX.png" alt="">
+                  <img src="https://imgur.com/NV3uNR2.png" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
