--- a/portfolio/mtsg.html
+++ b/portfolio/mtsg.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://imgur.com/1fH4Ioh.png" alt="">
+                  <img src="https://imgur.com/wrbVSvd.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
@@ -104,7 +104,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://imgur.com/NV3uNR2.png" alt="">
+                  <img src="https://imgur.com/0mq1EqJ.png" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
