--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
 
           <div class="row g-0 portfolio-container">
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr filter-am">
-              <img src="https://imgur.com/wHxzM9G.png" class="img-fluid-portfolio" alt="">
+              <img src="https://imgur.com/VRb2A9W.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>MyTransport.SG App Redesign</h4>
-                <a href="https://imgur.com/wHxzM9G.png" title="MyTransport.SG App Redesign | 2022"
+                <a href="https://imgur.com/VRb2A9W.png" title="MyTransport.SG App Redesign | 2022"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand" title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/mtsg.html" class="details-link"><i
                     class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
